# Rejection-Sampling

./: CMakeLists.txt
buildSample/: CMakeCache.txt  Makefile  cmake_install.cmake
include/rejectionSampling/: criteria.hpp  testSample.hpp
src/: rejectionSamplingMain.cpp
